--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "*",
+    "cron": "^1.8.2",
+    "dotenv": "^10.0.0",
     "kijiji-scraper": "^6.2.1",
     "mysql": "^2.18.1"
   }
