--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "axios": "^0.21.1",
     "cheerio": "*",
     "cron": "^1.8.2",
+    "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
-    "kijiji-scraper": "^6.2.1",
-    "mysql": "^2.18.1"
+    "kijiji-scraper": "https://github.com/celery6/kijiji-scraper.git",
+    "mysql": "^2.18.1",
+    "path": "^0.12.7"
   }
 }
